# maps-backend

./: Procfile  README.md  app.py  maps-82be0-firebase-adminsdk-fbsvc-0860dab1b8.json  nixpacks.toml  package-lock.json  pyproject.toml
api/: app.py  chat.py  firestore_service.py  test_firestore.py
data/: countries-table-world-pop-review.json  countries.py
flask_app/: app.py  extensions.py
flask_app/routes/: chat_routes.py
poetry-maps/: pyproject.toml
routes/: chat_routes.py  supabase_routes.py
