[tool.poetry]
name = "flask_app"
version = "0.1.0"
description = ""
authors = ["ruslana-tymchyk <tymchyk3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"
pydantic = "^2.10.6"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.10"
flask-limiter = "^3.12"
flask-cors = "^5.0.1"
openai = "1.75.0"
supabase = "^2.15.1"
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"